p3/repo/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil
  template:
    metadata:
      labels:
        app: wil
    spec:
      containers:
        - name: wil
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
