p3/repo/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: wil
  ports:
    - port: 8888
      targetPort: 8888
